name:           gluon
version:        0.0.1
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  default-extensions: GeneralizedNewtypeDeriving NoImplicitPrelude OverloadedStrings RecordWildCards
  hs-source-dirs:
      lib
  exposed-modules:
      Gluon.VDom
      Gluon.VDom.Attributes
      Gluon.VDom.Elements
      Gluon.VDom.Events
  build-depends:
      base
    , gi-webkit2
    , gi-webkit2webextension
    , gi-gtk
    , haskell-gi-base
    , protolude
    , gi-glib
    , gi-gio
    , text
    , containers

executable plugin
  default-language: Haskell2010
  main-is: TestPlugin.hs
  ghc-options: -Wall -Wall -dynamic -shared -optc-O -fPIC -lHSrts_thr_l-ghc8.0.1
  pkgconfig-depends: webkit2gtk-4.0
  c-sources:
      plugin/cbits/test.c
  hs-source-dirs:
      plugin
  default-extensions: GeneralizedNewtypeDeriving NoImplicitPrelude OverloadedStrings RecordWildCards
  build-depends:
      base
    , gi-webkit2
    , gi-webkit2webextension
    , gi-gtk
    , haskell-gi-base
    , protolude
    , gi-glib
    , gi-gio
    , gi-javascriptcore
    , text
    , containers
    , hsass
    , gluon

executable gluon
  main-is: Main.hs
  hs-source-dirs:
      gluon
  default-extensions: GeneralizedNewtypeDeriving NoImplicitPrelude OverloadedStrings RecordWildCards
  ghc-options: -Wall
  build-depends:
      base
    , gi-webkit2
    , gi-webkit2webextension
    , gi-gtk
    , haskell-gi-base
    , protolude
    , gi-glib
    , gi-gio
    , gi-javascriptcore
    , text
    , containers
    , hsass
    , data-default
    , bytestring
    , optparse-generic
    , temporary
    , directory
    , filepath
  default-language: Haskell2010
